--- a/SlingshotAPI/SlingshotAPI/SlingshotAPI.csproj
+++ b/SlingshotAPI/SlingshotAPI/SlingshotAPI.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SlingshotController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
