--- a/SlingshotAPI/SlingshotAPI.ApplicationLogicLayer/SlingshotAPI.ApplicationLogicLayer.csproj
+++ b/SlingshotAPI/SlingshotAPI.ApplicationLogicLayer/SlingshotAPI.ApplicationLogicLayer.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
@@ -58,8 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Attechment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\ValidationHandler.cs" />
     <Compile Include="Services\VcardManager.cs" />
   </ItemGroup>
   <ItemGroup>
