--- a/SlingshotAPI/SlingshotAPI.ApplicationLogicLayer/SlingshotAPI.ApplicationLogicLayer.csproj
+++ b/SlingshotAPI/SlingshotAPI.ApplicationLogicLayer/SlingshotAPI.ApplicationLogicLayer.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
